Реализовали интерфейс контекста

--- a/AgenstvoNedvizimosty/TimeTable207.Context/TimeTable207.Context.csproj
+++ b/AgenstvoNedvizimosty/TimeTable207.Context/TimeTable207.Context.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TimeTable207.Context.Contracts\TimeTable207.Context.Contracts.csproj" />
+  </ItemGroup>
+
 </Project>
