--- a/AgenstvoNedvizimosty/AgenstvoNedvizimosty/AgenstvoNedvizimosty.csproj
+++ b/AgenstvoNedvizimosty/AgenstvoNedvizimosty/AgenstvoNedvizimosty.csproj
@@ -10,4 +10,12 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Новая папка\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TimeTable207.Context\TimeTable207.Context.csproj" />
+  </ItemGroup>
+
 </Project>
